--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
 		"test_*.py"
 	],
 	"python.testing.pytestEnabled": false,
-	"python.testing.unittestEnabled": true
+	"python.testing.unittestEnabled": true,
+	"todo-tree.tree.showBadges": true
 }
