--- a/setup.cfg
+++ b/setup.cfg
@@ -10,3 +10,14 @@ packages=find:
 
 [options.packages.find]
 where=src
+[bumpver]
+current_version = "0.0.0"
+version_pattern = "MAJOR.MINOR.PATCH"
+commit_message = "bump version {old_version} -> {new_version}"
+commit = True
+tag = True
+push = False
+
+[bumpver:file_patterns]
+setup.cfg =
+    current_version = "{version}"
