--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,40 @@
 [metadata]
-# This is required for any package to install with a name
 name = stockpyl
+version = 0.0.1
+description = A Python package for inventory optimization
+long_description = file: README.md
+long_description_content_type = text/markdown
+keywords = inventory, optimization
+license = GNU General Public License v3 (GPLv3)
+license_files = LICENSE
+classifiers = 
+    Development Status :: 4 - Beta
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
+    Natural Language :: English
+    Programming Language :: Python :: 3
+    Topic :: Education
+    Topic :: Office/Business
+    Topic :: Scientific/Engineering
 
-# Since we are using a "src" layout, we need the following:
 [options]
+zip_safe=False
+include_package_data=True
+install_requires =
+    networkx
+    numpy
+    scipy
+    warnings
+    tabulate
+    math
+    pandas
+    time
+    matplotlib
+    types
+    numbers
+    itertools
+    tqdm
+    csv
+# Since we are using a "src" layout, we need the following:
 package_dir=
 	=src
 packages=find:
@@ -21,3 +52,5 @@ push = False
 [bumpver:file_patterns]
 setup.cfg =
     current_version = "{version}"
+    version = {version}
+
