--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -25,7 +25,8 @@ sphinx:
 
 python:
   install:
-    - requirements: docs/requirements.txt, requirements.txt
+    - requirements: docs/requirements.txt
+    - requirements: requirements.txt
     - method: pip
       path: .
       extra_requirements:
