Remove install_requires from setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,20 +19,20 @@ classifiers =
 [options]
 zip_safe=False
 include_package_data=True
-install_requires =
-    networkx
-    numpy
-    scipy
-    tabulate
-    math
-    pandas
-    time
-    matplotlib
-    types
-    numbers
-    itertools
-    tqdm
-    csv
+# install_requires =
+#     networkx
+#     numpy
+#     scipy
+#     tabulate
+#     math
+#     pandas
+#     time
+#     matplotlib
+#     types
+#     numbers
+#     itertools
+#     tqdm
+#     csv
 # Since we are using a "src" layout, we need the following:
 package_dir=
 	=src
