--- a/setup.cfg
+++ b/setup.cfg
@@ -19,20 +19,18 @@ classifiers =
 [options]
 zip_safe=False
 include_package_data=True
-# install_requires =
-#     networkx
-#     numpy
-#     scipy
-#     tabulate
-#     math
-#     pandas
-#     time
-#     matplotlib
-#     types
-#     numbers
-#     itertools
-#     tqdm
-#     csv
+install_requires =
+    build>=0.8.0
+    jsonpickle>=2.2.0
+    matplotlib>=3.5.2
+    networkx>=2.8.2
+    numpy>=1.22.4
+    pandas>=1.4.2
+    scipy>=1.8.1
+    setuptools>=61.2.0
+    sphinx_rtd_theme>=1.0.0
+    tabulate>=0.8.9
+    tqdm>=4.64.0
 # Since we are using a "src" layout, we need the following:
 package_dir=
 	=src
