--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
 name = stockpyl
 version = 0.0.8
-description = A Python package for inventory optimization
+description = A Python package for inventory optimization and simulation
 long_description = file: README.md
 long_description_content_type = text/markdown
 keywords = inventory, optimization
 license = GNU General Public License v3 (GPLv3)
 license_files = LICENSE
 classifiers = 
-    Development Status :: 4 - Beta
+    Development Status :: 5 - Production/Stable
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Natural Language :: English
     Programming Language :: Python :: 3
