--- a/setup.cfg
+++ b/setup.cfg
@@ -24,9 +24,9 @@ install_requires =
     jsonpickle>=1.0
     matplotlib>=2.0 
     networkx>=2.0 
-    numpy>=1.0
+    numpy>=1.22
     scipy>=1.0 
-    setuptools>=49.6 
+    setuptools>=63.1.0 #49.6 
     tabulate>=0.8.0
     tqdm>=4.1.0 
 # Since we are using a "src" layout, we need the following:
