--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ classifiers =
 zip_safe=False
 include_package_data=True
 install_requires =
-    build>=0.0.2 
+    build>=0.8.0 #0.0.2 
     jsonpickle>=1.0
     matplotlib>=2.0 
     networkx>=2.0 
