--- a/setup.cfg
+++ b/setup.cfg
@@ -24,8 +24,8 @@ install_requires =
     jsonpickle>=1.0
     matplotlib>=2.0 
     networkx>=2.0 
-    numpy>=1.22
-    scipy>=1.0 
+    numpy>=1.23.1 #1.22
+    scipy>=1.8.1 #1.0 
     setuptools>=63.1.0 #49.6 
     tabulate>=0.8.0
     tqdm>=4.1.0 
