--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,6 +10,7 @@ build:
   os: ubuntu-20.04
   tools:
     python: "3.9"
+    sphinx_toolbox: "3.1.2"
     # You can also specify other tool versions:
     # nodejs: "16"
     # rust: "1.55"
