--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ install_requires =
     scipy>=1.8.1
     setuptools>=61.2.0
     sphinx_rtd_theme>=1.0.0
+    sphinx_toolbox>=3.1.2
     tabulate>=0.8.9
     tqdm>=4.64.0
 # Since we are using a "src" layout, we need the following:
