Add a few bits of metadata to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,9 @@ version = 0.0.12
 description = A Python package for inventory optimization and simulation
 long_description = file: README.md
 long_description_content_type = text/markdown
+author = Larry Snyder
+author_email = larry.snyder@lehigh.edu
+url = https://github.com/LarrySnyder/stockpyl
 keywords = inventory, optimization
 license = GNU General Public License v3 (GPLv3)
 license_files = LICENSE
