--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ networkx==2.0
 numpy==1.22
 scipy==1.6.0
 setuptools==49.6
+sphinx==4.5.0
 sphinx_rtd_theme==1.0.0
 sphinx_toolbox==3.1.2
 tabulate==0.8.7
