--- a/setup.cfg
+++ b/setup.cfg
@@ -8,11 +8,11 @@ author = Larry Snyder
 author_email = larry.snyder@lehigh.edu
 url = https://github.com/LarrySnyder/stockpyl
 keywords = inventory, optimization
-license = GNU General Public License v3 (GPLv3)
+license = MIT License
 license_files = LICENSE
 classifiers = 
     Development Status :: 5 - Production/Stable
-    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
+    License :: OSI Approved :: MIT License
     Natural Language :: English
     Programming Language :: Python :: 3
     Topic :: Education
